--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
 </head>
 <body>
+<button id="nextpage"><a href="./diceroller.html" >got to diceroller</a>
+</button>
     <div class="product">
         <img src="./Product_img.webp" alt="img" id="product_img">
 
