--- a/diceroller.html
+++ b/diceroller.html
@@ -10,7 +10,9 @@
         height: 650px;
         width: 600px;
           margin: 50px auto;
-          border: 1px solid black;
+          border: 1px solid gainsboro;
+          border-radius: 0 200px 0 200px;
+          box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
         }
         #img{
             display: block;
@@ -21,6 +23,9 @@
             width: 200px;
             display: block;
             margin: 10px auto;
+            font-size: 20px;
+            background-color: coral;
+            border-radius: 20px;
         }
     </style>
 </head>
