--- a/diceroller.html
+++ b/diceroller.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="./style.css">
     <style>
        .diceroller{
-        height: 650px;
-        width: 600px;
+        height: 700px;
+        width: 650px;
           margin: 50px auto;
           border: 1px solid gainsboro;
           border-radius: 0 200px 0 200px;
@@ -34,7 +34,51 @@
         <img src="./main-dice.png" alt="img" id="img">
         <div class="dice"></div>
 
-        <button>ROll</button>
+        <button onclick="rolldice()">ROll</button>
     </div>
+
+    <script>
+        function rolldice(){
+            const randumnumber = Math.floor(Math.random()*(7-1))+1
+            const image = document.getElementById("img");
+
+            switch(randumnumber){
+                case 1:
+                image.src = "dice1.png"
+                break
+
+            }
+            switch(randumnumber){
+                case 2:
+                image.src = "dice2.png"
+                break
+
+            }
+            switch(randumnumber){
+                case 3:
+                image.src = "dice3.png"
+                break
+
+            }
+            switch(randumnumber){
+                case 4:
+                image.src = "dice4.png"
+                break
+
+            }
+            switch(randumnumber){
+                case 5:
+                image.src = "dice5.png"
+                break
+
+            }
+            switch(randumnumber){
+                case 6:
+                image.src = "dice6.png"
+                break
+
+            }
+        }
+    </script>
 </body>
 </html>
