--- a/diceroller.html
+++ b/diceroller.html
@@ -11,12 +11,12 @@
         width: 650px;
           margin: 50px auto;
           border: 1px solid gainsboro;
-          border-radius: 0 200px 0 200px;
+          border-radius: 200px;
           box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
         }
         #img{
             display: block;
-            margin: 20px auto;
+            margin: 60px auto;
         }
         button{
             height: 60px;
